--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "scripts": {
     "cleanup": "shx rm -rf dist",
     "prebuild": "npm run cleanup",
-    "start": "concurrently \"yarn spago:build\" \"reload -b -s index.html  -p 3000\"",
+    "start": "concurrently \"yarn format\" \"yarn spago:build\" \"reload -b -s index.html  -p 3000\"",
     "format": "purs-tidy format-in-place 'src/**/*.purs'",
     "rollup:watch": "rollup -c config/rollup.config.js -w",
     "spago:build": "spago build --watch --clear-screen --before 'yarn spago:bundle'",
